--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: "kotlin-kapt"
+
 
 android {
     compileSdkVersion 30
@@ -44,4 +46,12 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     // Location
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    //Room
+     def room_version = "2.2.5"
+     implementation "androidx.room:room-runtime:$room_version"
+     kapt "androidx.room:room-compiler:$room_version"
+    //Life cycle
+    def lifecycle_version = "2.1.0"
+    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+    implementation "android.arch.lifecycle:runtime:$lifecycle_version"
 }
