--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/NewTheme">
+        android:theme="@style/NewTheme"
+        >
         <activity android:name=".StepTrackerActivity" />
         <activity android:name=".StepCounterActivity" />
-        <activity android:name=".MainActivity">
+        <activity
+            android:windowSoftInputMode="adjustPan"
+            android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
