--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# api keys
+keys.kt
+
 # Built application files
 *.apk
 *.ap_
@@ -54,6 +57,7 @@ captures/
 # Uncomment the following lines if you do not want to check your keystore files in.
 #*.jks
 #*.keystore
+
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
