--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,11 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:$work_version"
     implementation "androidx.work:work-rxjava2:$work_version"
 
+    //Graph
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
+    //gif
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
 }
