--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,11 @@ dependencies {
     //gif
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    //recycler view
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+
+    //gif
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
