--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
     // Location
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'org.osmdroid:osmdroid-android:6.1.6'
+    implementation 'androidx.preference:preference-ktx:1.1.1'
     //Room
      def room_version = "2.2.5"
      implementation "androidx.room:room-runtime:$room_version"
